; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_remove_note.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_remove_note.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notes_tree = type { i32, i32, i32 }
%struct.leaf_node = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@default_notes_tree = common dso_local global %struct.notes_tree zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @remove_note(%struct.notes_tree* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.notes_tree*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.leaf_node, align 4
  store %struct.notes_tree* %0, %struct.notes_tree** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.notes_tree*, %struct.notes_tree** %4, align 8
  %8 = icmp ne %struct.notes_tree* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store %struct.notes_tree* @default_notes_tree, %struct.notes_tree** %4, align 8
  br label %10

10:                                               ; preds = %9, %2
  %11 = load %struct.notes_tree*, %struct.notes_tree** %4, align 8
  %12 = getelementptr inbounds %struct.notes_tree, %struct.notes_tree* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @assert(i32 %13)
  %15 = getelementptr inbounds %struct.leaf_node, %struct.leaf_node* %6, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @hashcpy(i32 %17, i8* %18)
  %20 = getelementptr inbounds %struct.leaf_node, %struct.leaf_node* %6, i32 0, i32 0
  %21 = call i32 @oidclr(i32* %20)
  %22 = load %struct.notes_tree*, %struct.notes_tree** %4, align 8
  %23 = load %struct.notes_tree*, %struct.notes_tree** %4, align 8
  %24 = getelementptr inbounds %struct.notes_tree, %struct.notes_tree* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @note_tree_remove(%struct.notes_tree* %22, i32 %25, i32 0, %struct.leaf_node* %6)
  %27 = getelementptr inbounds %struct.leaf_node, %struct.leaf_node* %6, i32 0, i32 0
  %28 = call i64 @is_null_oid(i32* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %10
  store i32 1, i32* %3, align 4
  br label %34

31:                                               ; preds = %10
  %32 = load %struct.notes_tree*, %struct.notes_tree** %4, align 8
  %33 = getelementptr inbounds %struct.notes_tree, %struct.notes_tree* %32, i32 0, i32 0
  store i32 1, i32* %33, align 4
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %31, %30
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @hashcpy(i32, i8*) #1

declare dso_local i32 @oidclr(i32*) #1

declare dso_local i32 @note_tree_remove(%struct.notes_tree*, i32, i32, %struct.leaf_node*) #1

declare dso_local i64 @is_null_oid(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
